HtmlUI: fixed popup overlaps ViewButtons

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/ViewButton.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/ViewButton.css
@@ -42,6 +42,7 @@
   }
 
   &.view-menu-popup-head {
+    position: absolute;
     background-color: @active-inverted-color;
     color: @active-color;
   }
